--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "dependencies": {
     "cors": "2.8.5",
-    "express": "4.17.3"
+    "express": "4.17.3",
+    "uuid": "^9.0.0"
   },
   "repository": {
     "type": "git",
